--- a/firefox/Makefile
+++ b/firefox/Makefile
@@ -3,31 +3,33 @@
 
 NAME:= firefox
 
-.PHONY: all build alpine ubuntu
+.PHONY: all build dev current
 
 all: build
 
 build:
-	echo "kindly choose between alpine or ubuntu version"; \
+	echo ">>> kindly type 'current' and hit enter > dev version is still under development \n ---"; \
     read version; \
 	make $$version 
 
-alpine:
-	cat alpine.Dockerfile > Dockerfile
-	docker build -t firefox:alpine .
+dev:
+	cat dev.Dockerfile > Dockerfile
+	docker build -t firefox:dev .
 	docker run -ti --rm \
 	   --name $(NAME) \
 	   -m 1GB \
        -e DISPLAY=unix$$DISPLAY \
        -v /tmp/.X11-unix:/tmp/.X11-unix \
-       firefox:alpine
+       firefox:dev
 
-ubuntu:
-	cat ubuntu.Dockerfile > Dockerfile
-	docker build -t firefox:ubuntu .
+current:
+	cat current.Dockerfile > Dockerfile
+	docker build -t firefox:current .
+	echo ">>> how much memory you want to allocate to this container? (512M, 1GB, 2GB and so on) \n ---"; \
+    read memory; \
 	docker run -ti --rm \
 	   --name $(NAME) \
-	   -m 1GB \
+	   -m $$memory \
        -e DISPLAY=unix$$DISPLAY \
        -v /tmp/.X11-unix:/tmp/.X11-unix \
-       firefox:ubuntu
+       firefox:current
